# rev-ce-builder

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/: api_urls.py
apps/integrations/: apps.py  models.py
apps/integrations/bluecat/: __init__.py  allocator.py  client.py
apps/integrations/devices/: __init__.py  base.py
apps/integrations/devices/cisco_iosxr/: __init__.py
apps/integrations/devices/cisco_iosxr/templates/: pe-core.cfg.j2  ztp_bootfile.py.j2
apps/integrations/opengear/: __init__.py  client.py
apps/inventory/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  urls.py  views.py
apps/inventory/management/commands/: seed_demo.py
apps/inventory/migrations/: 0001_initial.py
apps/ztp/: admin.py  api_urls.py  api_views.py  apps.py  models.py  renderer.py  serializers.py  tasks.py  urls.py  views.py
apps/ztp/migrations/: 0001_initial.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
templates/: base.html
templates/inventory/: _device_row.html  device_detail.html  device_list.html
templates/registration/: login.html
tests/: conftest.py  test_bluecat_client.py  test_renderer.py  test_ztp_endpoints.py
