[project]
name = "rev-ce-builder"
version = "0.1.0"
description = "ZTP orchestration and config builder for MPLS PE routers"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "django-environ>=0.11",
    "django-reversion>=5.1",
    "django-filter>=24.2",
    "django-htmx>=1.19",
    "psycopg[binary]>=3.2",
    "celery>=5.4",
    "redis>=5.0",
    "requests>=2.32",
    "pydantic>=2.7",
    "Jinja2>=3.1",
    "netmiko>=4.4",
    "napalm>=5.0",
    "paramiko>=3.4",
    "GitPython>=3.1",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "factory-boy>=3.3",
    "ruff>=0.5",
    "django-debug-toolbar>=4.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-ra --strict-markers"
